src/components/Widgets/NavigationDrawer/NavigationDrawer.css
.NavigationDrawerItem {
    cursor: pointer;

    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    user-select: none;

    height: 56px;
    border-radius: 100px;

    gap: 12px;

    color: var(--znui-on-surface-variant);
    transition: color 200ms var(--emphasized-motion), background-color 200ms var(--emphasized-motion);
}

.NavigationDrawer--compat .NavigationDrawerItem {
    height: 48px;
}

.NavigationDrawerItem > .background-state {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 50%;
    left: 50%;
    opacity: 0;

    border-radius: 100px;
    background: var(--znui-secondary-container);
    transition: left 200ms var(--emphasized-motion), right 200ms var(--emphasized-motion), opacity 200ms var(--emphasized-motion);
}

.NavigationDrawerItem > .inner {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 8px 16px;
    gap: 12px;
    z-index: 1;
}

.NavigationDrawerItem > .inner > .IconWrapper {
    --icon-size: 24px;
}

.NavigationDrawerItem > .inner > .text {
    flex: none;
    order: 1;
    flex-grow: 1;
    cursor: pointer;
    user-select: none;

    text-overflow: ellipsis;
    white-space: nowrap;
}

.NavigationDrawerItem > .inner > .badge {
    flex: none;
    order: 2;
    flex-grow: 0;
}

.NavigationDrawerItem--selected {
    color: var(--znui-on-secondary-container);
}

.NavigationDrawerItem--selected > .background-state {
    right: 0;
    left: 0;
    opacity: 1;
}

.NavigationDrawerItem:hover > .state-layer {
    opacity: 0.09;
    background: var(--znui-primary);
}

